--- a/components/Header/Header.less
+++ b/components/Header/Header.less
@@ -1,34 +1,31 @@
-.header {
-  .flex(space-between, center);
-  background-color: darkgray;
-  .width-100();
-  height: 120px;
-  margin-top: 44px;
-  padding-bottom: 15px;
-  @media(min-width: 1280px){
-    width: 1280px;
-  }
-  h1 {
-    font-size: 60px;
-    font-family: Didot, serif;
-    font-weight: bold;
-    flex: 8;
-    text-align: center;
-    color: @landing-color-black;
-  }
-  span {
-    align-self: flex-end;
-    font-size: 11px;
-    font-weight: bold;
-    letter-spacing: 1px;
-  }
-  .date {
-    margin-left: 25px;
-    flex: 1;
-  }
-  .temp {
-    text-align: right;
-    margin-right: 25px;
-    flex: 1;
-  }
-}
+// header {
+//   //margin-top: 100px;
+//   //.flex(space-between, center);
+//   background-color: darkgray;
+//   //.width-100();
+//   height: 500px;
+//   //margin-top: 44px;
+//   padding-bottom: 15px;
+  
+  
+//   @media(min-width: 1280px){
+//     width: 1280px;
+//   }
+
+
+//   h1 {
+//     font-size: 60px;
+//     font-family: Didot, serif;
+//     font-weight: bold;
+//     flex: 8;
+//     text-align: center;
+//     color: @landing-color-black;
+//   }
+//   // span {
+//   //   align-self: flex-end;
+//   //   font-size: 11px;
+//   //   font-weight: bold;
+//   //   letter-spacing: 1px;
+//   // }
+
+// }
