--- a/components/TopBar/TopBar.less
+++ b/components/TopBar/TopBar.less
@@ -4,12 +4,15 @@
   position: fixed;
   height: 44px;
   background-color: @landing-color-black;
+  top: 0;
 
   .menu {
     .menu-button{
           color: @landing-color-white;
+          font-size: 30px;
     }
   }
+
 
   // .container {
   //   .width-100();
