--- a/css/index.css
+++ b/css/index.css
@@ -167,7 +167,6 @@ img {
   height: auto;
 }
 .container {
-  max-width: 800px;
   width: 100%;
   margin: 0 auto;
 }
@@ -186,27 +185,24 @@ img {
   position: fixed;
   height: 44px;
   background-color: #141010;
+  top: 0;
 }
 .top-bar .menu .menu-button {
   color: #e2d4d4;
+  font-size: 30px;
 }
-.header {
+header {
+  margin-top: 40px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   background-color: darkgray;
-  width: 100%;
-  height: 120px;
-  margin-top: 44px;
+  height: 500px;
   padding-bottom: 15px;
+  text-align: center;
 }
-@media (min-width: 1280px) {
-  .header {
-    width: 1280px;
-  }
-}
-.header h1 {
+header h1 {
   font-size: 60px;
   font-family: Didot, serif;
   font-weight: bold;
@@ -214,18 +210,13 @@ img {
   text-align: center;
   color: #141010;
 }
-.header span {
-  align-self: flex-end;
-  font-size: 11px;
-  font-weight: bold;
-  letter-spacing: 1px;
+header div {
+  width: 50%;
 }
-.header .date {
-  margin-left: 25px;
-  flex: 1;
-}
-.header .temp {
-  text-align: right;
-  margin-right: 25px;
-  flex: 1;
+footer {
+  height: 50px;
+  width: 100%;
+  background-color: #141010;
+  color: #e2d4d4;
+  text-align: center;
 }
