--- a/less/index.less
+++ b/less/index.less
@@ -22,5 +22,45 @@
 
 
 
+header {
+  margin-top: 40px;
+  .flex(center, center, column);
+  background-color: darkgray;
+  //.width-100();
+  height: 500px;
+  //margin-top: 44px;
+  padding-bottom: 15px;
+  text-align: center;
+  
+  
+  // @media(min-width: 1280px){
+  //   width: 1280px;
+  // }
 
 
+  h1 {
+    font-size: 60px;
+    font-family: Didot, serif;
+    font-weight: bold;
+    flex: 8;
+    text-align: center;
+    color: @landing-color-black;
+  }
+  div {
+    width: 50%;
+  }
+  // span {
+  //   align-self: flex-end;
+  //   font-size: 11px;
+  //   font-weight: bold;
+  //   letter-spacing: 1px;
+  // }
+}
+
+footer {
+  height: 50px;
+  width: 100%;
+  background-color: @landing-color-black;
+  color: @landing-color-white;
+  text-align: center;
+}
