--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,10 @@
 @mobile: ~"(max-width: 500px)";
 
 
-@landing-color-background: lightgrey;
+@landing-color-background:  rgba(97, 100, 104, 0.1);
 @landing-color-black: rgb(20, 16, 16);
 @landing-color-white: rgb(226, 212, 212);
+
+@landing-features-background: rgba(97, 100, 104, 0.25);
+
+@landing-how-it-works-background: rgba(97, 100, 104, 0.75);
