--- a/css/index.css
+++ b/css/index.css
@@ -153,6 +153,10 @@ h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
 }
+h3 {
+  font-size: 2.8rem;
+  padding-bottom: 10px;
+}
 h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
@@ -191,7 +195,10 @@ img {
   color: #e2d4d4;
   font-size: 30px;
 }
-header {
+.container {
+  max-width: 1000px;
+}
+.container header {
   margin-top: 40px;
   display: flex;
   justify-content: center;
@@ -202,7 +209,7 @@ header {
   padding-bottom: 15px;
   text-align: center;
 }
-header h1 {
+.container header h1 {
   font-size: 60px;
   font-family: Didot, serif;
   font-weight: bold;
@@ -210,10 +217,62 @@ header h1 {
   text-align: center;
   color: #141010;
 }
-header div {
+.container header div {
   width: 50%;
 }
+.container .features {
+  background-color: rgba(97, 100, 104, 0.25);
+}
+.container .how-it-works {
+  background-color: rgba(97, 100, 104, 0.75);
+}
+.container .how-it-works .how-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.container .how-it-works .how-body .how-section {
+  width: 30%;
+}
+.container .cta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.container .cta .cta-left {
+  width: 50%;
+}
+.container .cta .cta-right {
+  width: 50%;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  background-color: darkgray;
+  color: white;
+  border: 1px solid black;
+  cursor: pointer;
+  font-size: 20px;
+}
+@media (max-width: 500px) {
+  .container .cta .cta-right {
+    width: 100%;
+  }
+}
+.container .cta .cta-right:hover {
+  background: white;
+  color: darkgray;
+}
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 50px;
   width: 100%;
   background-color: #141010;
