--- a/less/index.less
+++ b/less/index.less
@@ -22,18 +22,22 @@
 
 
 .container {
-  max-width: 1000px;
+  //max-width: 1000px;
 
   header {
-    margin-top: 40px;
     .flex(center, center, column);
-    background-color: darkgray;
-    //.width-100();
-    height: 500px;
-    //margin-top: 44px;
-    padding-bottom: 15px;
     text-align: center;
+    height: 100vh;
     
+    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-attachment: fixed;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		text-align: center;
     
     // @media(min-width: 1280px){
     //   width: 1280px;
@@ -41,24 +45,62 @@
 
 
     h1 {
-      font-size: 60px;
-      font-family: Didot, serif;
-      font-weight: bold;
+      //font-size: 60px;
+      font-family: "Helvetica", sans-serif;
+      font-size: 12rem;
+      font-weight: lighter;
       flex: 8;
       text-align: center;
-      color: @landing-color-black;
+      color: @landing-color-white;
+      line-height: 1.75em;
+      margin: 0 0 1em 0;
+      text-transform: uppercase;
+  
+    }
+    p {
+      color: @landing-color-white;
     }
     div {
       width: 50%;
     }
+    .more {
+      bottom: 0;
+      color: #fff;
+      font-size: 2rem;
+      height: 8%;
+      letter-spacing: 0.225em;
+      opacity: 1;
+      position: absolute;
+      text-align: center;
+      text-transform: uppercase;
+      z-index: 1;
+  }
+  a {
+      text-decoration: none;
+  }
+
   }
 
   .features {
     background-color: @landing-features-background;
+    padding: 150px 5%;
+    h2 {
+      .center();
+      font-size: 8rem;
+      font-weight: lighter;
+      text-align: center;
+      color: @landing-color-white;
+      line-height: 1.75em;
+      margin: 0 0 1em 0;
+    }
+    p {
+      font-size: 2.6rem;
+    }
   }
   .how-it-works {
       background-color: @landing-how-it-works-background;
-
+      padding: 150px 5%;
+      
     .how-body {
       .flex(space-between, center, row);
       .how-section {
