--- a/less/variables.less
+++ b/less/variables.less
@@ -3,7 +3,7 @@
 
 @landing-color-background:  rgba(97, 100, 104, 0.1);
 @landing-color-black: rgb(20, 16, 16);
-@landing-color-white: rgb(226, 212, 212);
+@landing-color-white: #fff;
 
 @landing-features-background: rgba(97, 100, 104, 0.25);
 
