--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,10 @@
 @mobile: ~"(max-width: 500px)";
 
 
-@landing-color-background:  rgba(97, 100, 104, 0.1);
+@landing-color-background:  rgb(97, 100, 104);
 @landing-color-black: rgb(20, 16, 16);
 @landing-color-white: #fff;
 
-@landing-features-background: rgba(97, 100, 104, 0.25);
+@landing-features-background: rgb(78, 79, 85);
 
-@landing-how-it-works-background: rgba(97, 100, 104, 0.75);
+@landing-how-it-works-background: rgb(100, 97, 104);
