--- a/less/global.less
+++ b/less/global.less
@@ -7,11 +7,11 @@ html {
 }
 
 html, body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Permanent Marker', cursive;
 }
 
 h1 {
