--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,20 @@
 @mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 1025px)";
 
 
 @landing-color-background:  rgb(97, 100, 104);
 @landing-color-black: rgb(20, 16, 16);
 @landing-color-white: #fff;
 
-@landing-features-background: rgb(78, 79, 85);
-
+@landing-features-background:#8e4832;
+@landing-features-text: #251111;
 @landing-how-it-works-background: rgb(100, 97, 104);
+
+
+@primary: #9e0808;
+@primary-light: #d74731;
+@primary-dark: #690000;
+
+@secondary: #5b3f36;
+@secondary-light: #896a60;
+@secondary-dark: #301810;
