--- a/components/TopBar/TopBar.less
+++ b/components/TopBar/TopBar.less
@@ -3,8 +3,11 @@
   .flex(center);
   position: fixed;
   height: 44px;
-  background-color: @landing-color-black;
+  background-color: @primary;
   top: 0;
+  border-top: 5px solid @primary-dark;
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+  z-index: 500;
 
   .menu {
     .menu-button{
