--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,14 +22,14 @@
           border-radius: @radius;
 }
 
-.button-creator(@width, @height, @bg-color, @font-color, @font-size) {
+.button-creator(@width, @height, @bg-color, @font-color, @font-size, @hover: white) {
   .border-radius(15px);
   .center;
   width: @width;
   height: @height;
   background-color: @bg-color;
   color: @font-color;
-  border: 1px solid black;
+  border: 0px solid black;
   cursor: pointer;
   font-size: @font-size;
 
@@ -38,7 +38,7 @@
   }
   
   &:hover {
-    background: white;
-    color: @bg-color;
+    background: @hover;
+    color: @font-color;
   }
 }
