--- a/less/index.less
+++ b/less/index.less
@@ -72,6 +72,11 @@
       .button-creator(200px, 50px, @primary, @landing-color-white, 20px, @primary-dark);
       box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
       margin: 2%;
+
+      @media @mobile {
+        width: 70%;
+        margin: 10%;
+      }
     }
     .more {
       bottom: 0;
@@ -123,7 +128,11 @@
   .how-it-works {
       //background-color: @landing-how-it-works-background;
       background-color: @primary-dark;
-      padding: 5% 5%;
+      padding: 5% 3%;
+
+      @media @tablet {
+        padding: 5% 1%;
+      }
 
     h2 {
       .center();
@@ -144,21 +153,45 @@
     .how-body {
       .flex(space-between, flex-start, row);
       //align-items: flex-start;
+      flex-wrap: wrap;
       
       .how-section {
         width: 30%;
         
+        padding: 1% 1% 3% 0;
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+        width: 450px;
+        height: 200px;
+        margin: 1%;
+        display: flex;
+        flex-direction: row;
+        box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+        .border-radius(8px);
+
+        img {
+          width: 110px;
+          margin: 10px;
+          height: auto;
+
+          @media @mobile {
+            width: 25%;
+            height: 50%;
+          }
+        }
         @media @mobile {
           width: 100%;
-          padding: 2%;
+          padding: 5%;
+          height: auto;
         }
         h3, p {
-          color: @landing-color-white;
+          //color: @landing-color-white;
         }
       }
       @media @mobile {
         flex-direction: column;
-        padding: 5% 10%;
+        padding: 5% 0;
       }
     }
   }
@@ -191,6 +224,9 @@
     @media @tablet {
       flex-direction: column;
       padding: 5% 10%;
+    }
+    @media @mobile {
+      padding: 10% 15%;
     }
   }
 
