--- a/css/index.css
+++ b/css/index.css
@@ -323,6 +323,11 @@ img {
     padding: 5% 1%;
   }
 }
+@media (max-width: 500px) {
+  .container .how-it-works {
+    width: 100%;
+  }
+}
 .container .how-it-works h2 {
   display: flex;
   justify-content: center;
@@ -343,7 +348,7 @@ img {
 }
 .container .how-it-works .how-body {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
@@ -378,8 +383,9 @@ img {
 @media (max-width: 500px) {
   .container .how-it-works .how-body .how-section {
     width: 100%;
-    padding: 5%;
+    padding: 0 5%;
     height: auto;
+    margin: 0;
   }
 }
 @media (max-width: 500px) {
@@ -391,11 +397,11 @@ img {
 .container .cta {
   background-color: transparent;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
   color: #fff;
-  padding: 5% 20%;
+  padding: 5% 10%;
 }
 .container .cta .cta-left {
   width: 50%;
@@ -422,7 +428,7 @@ img {
   align-items: center;
   width: 200px;
   height: 50px;
-  background-color: #5b3f36;
+  background-color: #9e0808;
   color: #fff;
   border: 0px solid black;
   cursor: pointer;
@@ -436,7 +442,7 @@ img {
   }
 }
 .container .cta .cta-right:hover {
-  background: #301810;
+  background: #690000;
   color: #fff;
 }
 @media (max-width: 1025px) {
@@ -456,7 +462,7 @@ footer {
   align-items: center;
   height: 50px;
   width: 100%;
-  background-color: #9e0808;
+  background-color: #690000;
   color: #fff;
   text-align: center;
 }
