Updated color scheme.

--- a/less/variables.less
+++ b/less/variables.less
@@ -15,6 +15,6 @@
 @primary-light: #d74731;
 @primary-dark: #690000;
 
-@secondary: #5b3f36;
-@secondary-light: #896a60;
-@secondary-dark: #301810;
+@secondary: #b0bec5;
+@secondary-light: #e2f1f8;
+@secondary-dark: #808e95;
