--- a/css/index.css
+++ b/css/index.css
@@ -284,9 +284,9 @@ img {
   text-decoration: none;
 }
 .container .features {
-  background-color: #d74731;
+  background-color: #690000;
   padding: 150px 5%;
-  color: #251111;
+  color: #fff;
 }
 @media (max-width: 1025px) {
   .container .features {
@@ -315,7 +315,8 @@ img {
   font-size: 2.6rem;
 }
 .container .how-it-works {
-  background-color: #690000;
+  background-color: #b0bec5;
+  color: #141010;
   padding: 5% 3%;
 }
 @media (max-width: 1025px) {
@@ -326,6 +327,7 @@ img {
 @media (max-width: 500px) {
   .container .how-it-works {
     width: 100%;
+    padding: 5% 0%;
   }
 }
 .container .how-it-works h2 {
@@ -356,9 +358,8 @@ img {
 .container .how-it-works .how-body .how-section {
   width: 30%;
   padding: 1% 1% 3% 0;
-  background-color: white;
-  color: black;
-  border: 1px solid black;
+  background-color: #fff;
+  color: #141010;
   width: 450px;
   height: 200px;
   margin: 1%;
@@ -386,6 +387,9 @@ img {
     padding: 0 5%;
     height: auto;
     margin: 0;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
   }
 }
 @media (max-width: 500px) {
