--- a/less/index.less
+++ b/less/index.less
@@ -98,9 +98,9 @@
 
   .features {
     //background-color: @landing-features-background;
-    background-color: @primary-light;
+    background-color: @primary-dark;
     padding: 150px 5%;
-    color: @landing-features-text;
+    color: @landing-color-white;
 
     @media @tablet {
       padding: 5% 5%;
@@ -127,7 +127,8 @@
   }
   .how-it-works {
       //background-color: @landing-how-it-works-background;
-      background-color: @primary-dark;
+      background-color: @secondary;
+      color: @landing-color-black;
       padding: 5% 3%;
 
       @media @tablet {
@@ -135,6 +136,7 @@
       }
       @media @mobile {
         width: 100%;
+        padding: 5% 0%;
       }
 
     h2 {
@@ -160,11 +162,10 @@
       
       .how-section {
         width: 30%;
-        
         padding: 1% 1% 3% 0;
-        background-color: white;
-        color: black;
-        border: 1px solid black;
+        background-color: @landing-color-white;
+        color: @landing-color-black;
+        //border: 1px solid black;
         width: 450px;
         height: 200px;
         margin: 1%;
@@ -188,7 +189,7 @@
           padding: 0 5%;
           height: auto;
           margin: 0;
-          //.radius(0px);
+          .border-radius(0px);
         }
         h3, p {
           //color: @landing-color-white;
