Trying to fix iOS background display problems

--- a/less/index.less
+++ b/less/index.less
@@ -32,6 +32,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  // @media @mobile {
+  //   background-size: auto;
+  // }
+
   header {
     .flex(center, center, column);
     text-align: center;
