--- a/less/variables.less
+++ b/less/variables.less
@@ -6,9 +6,9 @@
 @landing-color-black: rgb(20, 16, 16);
 @landing-color-white: #fff;
 
-@landing-features-background:#8e4832;
-@landing-features-text: #251111;
-@landing-how-it-works-background: rgb(100, 97, 104);
+//@landing-features-background:#8e4832;
+//@landing-features-text: #251111;
+//@landing-how-it-works-background: rgb(100, 97, 104);
 
 
 @primary: #9e0808;
