--- a/less/variables.less
+++ b/less/variables.less
@@ -10,11 +10,26 @@
 //@landing-features-text: #251111;
 //@landing-how-it-works-background: rgb(100, 97, 104);
 
+//Reds
+// @primary: #9e0808;
+// @primary-light: #d74731;
+// @primary-dark: #690000;
 
-@primary: #9e0808;
-@primary-light: #d74731;
-@primary-dark: #690000;
-
+//Grey
 @secondary: #b0bec5;
 @secondary-light: #e2f1f8;
 @secondary-dark: #808e95;
+
+//Blues
+// @primary: #3f51b5;
+// @primary-light: #757de8;
+// @primary-dark: #002984;
+//Secondary Red
+// @secondary: #f44336;
+// @secondary-light: #ff7961;
+// @secondary-dark: #ba000d;
+
+//Browns
+@primary: #5d4037;
+@primary-light: #8b6b61;
+@primary-dark: #321911;
