--- a/css/index.css
+++ b/css/index.css
@@ -182,9 +182,9 @@ img {
   flex-direction: row;
   position: fixed;
   height: 44px;
-  background-color: #9e0808;
+  background-color: #5d4037;
   top: 0;
-  border-top: 5px solid #690000;
+  border-top: 4px solid #321911;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   z-index: 500;
 }
@@ -250,7 +250,7 @@ img {
   align-items: center;
   width: 200px;
   height: 50px;
-  background-color: #9e0808;
+  background-color: #5d4037;
   color: #fff;
   border: 0px solid black;
   cursor: pointer;
@@ -264,7 +264,7 @@ img {
   }
 }
 .container header button:hover {
-  background: #690000;
+  background: #321911;
   color: #fff;
 }
 @media (max-width: 500px) {
@@ -289,7 +289,7 @@ img {
   text-decoration: none;
 }
 .container .features {
-  background-color: #690000;
+  background-color: #321911;
   padding: 150px 5%;
   color: #fff;
 }
@@ -317,10 +317,10 @@ img {
   }
 }
 .container .features p {
-  font-size: 2.6rem;
+  font-size: 1.8rem;
 }
 .container .how-it-works {
-  background-color: #b0bec5;
+  background-color: #808e95;
   color: #141010;
   padding: 5% 3%;
 }
@@ -332,7 +332,7 @@ img {
 @media (max-width: 500px) {
   .container .how-it-works {
     width: 100%;
-    padding: 5% 0%;
+    padding: 5% 0 0 0;
   }
 }
 .container .how-it-works h2 {
@@ -400,7 +400,7 @@ img {
 @media (max-width: 500px) {
   .container .how-it-works .how-body {
     flex-direction: column;
-    padding: 5% 0;
+    padding: 5% 0 0 0;
   }
 }
 .container .cta {
@@ -437,7 +437,7 @@ img {
   align-items: center;
   width: 200px;
   height: 50px;
-  background-color: #9e0808;
+  background-color: #5d4037;
   color: #fff;
   border: 0px solid black;
   cursor: pointer;
@@ -451,7 +451,7 @@ img {
   }
 }
 .container .cta .cta-right:hover {
-  background: #690000;
+  background: #321911;
   color: #fff;
 }
 @media (max-width: 1025px) {
@@ -471,7 +471,7 @@ footer {
   align-items: center;
   height: 50px;
   width: 100%;
-  background-color: #690000;
+  background-color: #321911;
   color: #fff;
   text-align: center;
 }
