--- a/less/index.less
+++ b/less/index.less
@@ -32,20 +32,11 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  // @media @mobile {
-  //   background-size: auto;
-  // }
-
   header {
     .flex(center, center, column);
     text-align: center;
     height: 100vh;
 		text-align: center;
-    
-    // @media(min-width: 1280px){
-    //   width: 1280px;
-    // }
-
 
     h1 {
       //font-size: 60px;
@@ -105,8 +96,8 @@
   }
 
   .features {
-    //background-color: @landing-features-background;
     background-color: @primary-dark;
+    // background-color: @secondary-dark;
     padding: 150px 5%;
     color: @landing-color-white;
 
@@ -130,12 +121,11 @@
     }
     
     p {
-      font-size: 2.6rem;
+      font-size: 1.8rem;
     }
   }
   .how-it-works {
-      //background-color: @landing-how-it-works-background;
-      background-color: @secondary;
+      background-color: @secondary-dark;
       color: @landing-color-black;
       padding: 5% 3%;
 
@@ -144,7 +134,7 @@
       }
       @media @mobile {
         width: 100%;
-        padding: 5% 0%;
+        padding: 5% 0 0 0;
       }
 
     h2 {
@@ -205,7 +195,7 @@
       }
       @media @mobile {
         flex-direction: column;
-        padding: 5% 0;
+        padding: 5% 0 0 0;
       }
     }
   }
