--- a/components/TopBar/TopBar.less
+++ b/components/TopBar/TopBar.less
@@ -1,6 +1,6 @@
 .top-bar {
   .width-100();
-  .flex(center);
+  .flex(space-between, center);
   position: fixed;
   height: 44px;
   background-color: @primary;
@@ -8,57 +8,22 @@
   border-top: 4px solid @primary-dark;
   box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
   z-index: 500;
+  padding: 0 50px;
 
-  .menu {
-    .menu-button{
-          color: @landing-color-white;
-          font-size: 30px;
-    }
+  .heading{
+    font-family: 'Permanent Marker', cursive;
+    color: @landing-color-white;
+    font-size: 30px;
   }
 
-
-  // .container {
-  //   .width-100();
-  //   .flex();
-  //   color: @lambda-times-color-white;
-  //   letter-spacing: 1px;
-  //   padding: 0 10px;
-  //   @media(min-width: 1280px){
-  //     width: 1280px;
-  //   }
-  //   .container-left {
-  //     .flex(none, center);
-  //     flex: 1;
-  //     font-size: 11px;
-  //     span {
-  //       cursor: pointer;
-  //       margin-right: 25%;
-  //       font-weight: bold;
-  //     }
-  //   }
-  //   .container-center {
-  //     .flex(center, center);
-  //     flex: 3;
-  //     font-size: 9px;
-  //     span {
-  //       cursor: pointer;
-  //       margin-right: 5%;
-  //       &:last-child{
-  //         margin-right: 0;
-  //       }
-  //       &:hover {
-  //         text-decoration: underline;
-  //       }
-  //     }
-  //   }
-  //   .container-right {
-  //     .flex(flex-end, center);
-  //     flex: 1;
-  //     font-size: 11px;
-  //     font-weight: bold;
-  //     span {
-  //       cursor: pointer;
-  //     }
-  //   }
+  // .fas{
+  //   color: @landing-color-white;
+  //   font-size: 30px;
   // }
+  .menu {
+    .menu-button{
+      color: @landing-color-white;
+      font-size: 30px;
+    }
+  }
 }
