--- a/less/index.less
+++ b/less/index.less
@@ -7,18 +7,8 @@
 @import 'global.less';
 
 // Reusable components
-//@import 'navigation.less';
-//@import 'footer.less';
 @import './components/TopBar/TopBar';
-@import './components/Header/Header';
-// @import './components/Tabs/Tabs';
-// @import './components/Cards/Cards';
-// @import './components/Carousel/Carousel';
-
-// Page Specific
-//@import 'home-page.less';
-
-
+@import './components/Menu/Menu.less';
 
 
 .container {
@@ -39,7 +29,6 @@
 		text-align: center;
 
     h1 {
-      //font-size: 60px;
       font-family: 'Permanent Marker', cursive;
       font-size: 12rem;
       font-weight: lighter;
@@ -47,7 +36,6 @@
       text-align: center;
       color: @landing-color-white;
       line-height: 1.75em;
-      //margin: 0 0 1em 0;
       text-transform: uppercase;
       @media @tablet {
         font-size: 10rem;
@@ -155,7 +143,6 @@
 
     .how-body {
       .flex(space-around, flex-start, row);
-      //align-items: flex-start;
       flex-wrap: wrap;
       
       .how-section {
@@ -163,7 +150,6 @@
         padding: 1% 1% 3% 0;
         background-color: @landing-color-white;
         color: @landing-color-black;
-        //border: 1px solid black;
         width: 450px;
         height: 200px;
         margin: 1%;
@@ -203,7 +189,6 @@
   .cta {
     background-color: transparent;
     .flex(space-evenly, center, row);
-    //width: 70%;
     color: @landing-color-white;
     padding: 5% 10%;
     .cta-left {
@@ -219,11 +204,22 @@
       }
     }
     .cta-right {
-      width: 50%;
-      .center();
-      .button-creator(200px, 50px, @primary, @landing-color-white, 20px, @primary-dark);
-      box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-      padding: 0 40px;
+      a {
+        text-decoration: none;
+      }
+      button {
+        width: 50%;
+        .center();
+        .button-creator(200px, 50px, @primary, @landing-color-white, 20px, @primary-dark);
+        box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+        margin: 2%;
+        padding: 0 40px;
+        
+        @media @mobile {
+          width: 70%;
+          margin: 10%;
+        }
+      }
     }
     @media @tablet {
       flex-direction: column;
@@ -233,8 +229,12 @@
       padding: 10% 15%;
     }
   }
-
 }
+
+.menu-on {
+    opacity: 0.75;
+}
+
 footer {
   .center();
   height: 50px;
