--- a/components/Menu/Menu.less
+++ b/components/Menu/Menu.less
@@ -1,63 +1,55 @@
-
-
 .menu {
     left: 25px;
-    
     .menu-button {
-      padding: 15px;
-      color: @landing-color-white;
-      cursor: pointer;
-      &:hover {
-        color: @secondary-dark;
-      }
+        padding: 15px;
+        color: @landing-color-white;
+        cursor: pointer;
+        &:hover {
+            color: @secondary-dark;
+        }
     }
     .menu-content {
-    background: @secondary;
-    color: @landing-color-white;
-    height: 100%;
-    max-width: 80%;
-    overflow-y: auto;
-    padding: 50px 50px;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 25%;
-    z-index: 10002;
-
-    @media @tablet {
-        width: 40%
+        background: @secondary;
+        color: @landing-color-white;
+        height: 100%;
+        max-width: 80%;
+        overflow-y: auto;
+        padding: 50px 50px;
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: 25%;
+        z-index: 10002;
+        @media @tablet {
+            width: 40%;
+        }
+        @media @mobile {
+            width: 85%;
+            padding: 50px 0;
+        }
+        .close-btn {
+            // background-image: url(../../images/close.svg);
+            //background-position: 4.85em 1em;
+            // background-repeat: no-repeat;
+            // border: 0;
+            cursor: pointer;
+            display: block;
+            height: 25px;
+            position: absolute;
+            right: 25px;
+            top: 11px;
+            vertical-align: middle;
+            width: 25px;
+        }
     }
-    @media @mobile {
-        width: 80%
-    }
-    
-    .close-btn {
-       // background-image: url(../../images/close.svg);
-        //background-position: 4.85em 1em;
-       // background-repeat: no-repeat;
-       // border: 0;
-        cursor: pointer;
-        display: block;
-       height: 25px;
-       position: absolute;
-       right: 25px;
-       top: 11px;
-       vertical-align: middle;
-       width: 25px;
-    }
-    }
-   
-
     .dropdown-link {
-      width: 100%;
-      //text-align: center;
-      padding: 15px 0;
-      font-size: 18px;
-      text-decoration: none;
-      color: @secondary-dark;
-
+        width: 100%; //text-align: center;
+        padding: 15px 0;
+        font-size: 18px;
+        text-decoration: none;
+        color: @secondary-dark;
     }
- a {
+    a {
         border: 0;
         color: inherit;
         display: block;
@@ -69,107 +61,108 @@
         &:hover {
             color: @secondary-dark;
             background-color: @secondary-light;
-          }
+        }
     }
     li {
-        border-top: solid 1px rgba(0, 0, 0, 0.125);
-        //margin: 25px 0 0 0;
+        border-top: solid 1px rgba(0, 0, 0, 0.125); //margin: 25px 0 0 0;
         padding: 30px 0;
+        @media @mobile {
+          text-align: center;
+        }
         &:hover {
             color: @secondary-dark;
             background-color: @secondary-light;
-          }
+        }
     }
     li:first-child {
-            border-top: 0;
-        }
-
-
-    .menu-hidden {
-      display: none;
+        border-top: 0;
     }
-    
+    .menu-hidden {
+        display: none;
+    }
     .slide-in-top {
-      -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-              animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
     .slide-out-top {
-      -webkit-animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-              animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+        -webkit-animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+        animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     }
     .slide-in-right {
         -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-                animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
     .slide-out-right {
         -webkit-animation: slide-out-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-                animation: slide-out-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-out-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
-  }
-  
+}
 
-  /**
+/**
    * ----------------------------------------
    * animation slide-in-top
    * ----------------------------------------
    */
-   @-webkit-keyframes slide-in-top {
-    0% {
-      -webkit-transform: translateY(-1000px);
-              transform: translateY(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  @keyframes slide-in-top {
-    0% {
-      -webkit-transform: translateY(-1000px);
-              transform: translateY(-1000px);
-      opacity: 0;
-    }
-    100% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
-  }
 
-  /**
+@-webkit-keyframes slide-in-top {
+    0% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-in-top {
+    0% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+/**
    * ----------------------------------------
    * animation slide-out-top
    * ----------------------------------------
    */
-   @-webkit-keyframes slide-out-top {
-    0% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: translateY(-1000px);
-              transform: translateY(-1000px);
-      opacity: 0;
-    }
-  }
-  @keyframes slide-out-top {
-    0% {
-      -webkit-transform: translateY(0);
-              transform: translateY(0);
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: translateY(-1000px);
-              transform: translateY(-1000px);
-      opacity: 0;
-    }
-  }
-  
 
-  /* ----------------------------------------------
+@-webkit-keyframes slide-out-top {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+}
+
+@keyframes slide-out-top {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+}
+
+/* ----------------------------------------------
  * Generated by Animista on 2019-2-6 11:32:19
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
@@ -179,32 +172,34 @@
  * animation slide-in-right
  * ----------------------------------------
  */
+
 @-webkit-keyframes slide-in-right {
     0% {
-      -webkit-transform: translateX(1000px);
-              transform: translateX(1000px);
-      opacity: 0;
+        -webkit-transform: translateX(1000px);
+        transform: translateX(1000px);
+        opacity: 0;
     }
     100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
-  }
-  @keyframes slide-in-right {
+}
+
+@keyframes slide-in-right {
     0% {
-      -webkit-transform: translateX(1000px);
-              transform: translateX(1000px);
-      opacity: 0;
+        -webkit-transform: translateX(1000px);
+        transform: translateX(1000px);
+        opacity: 0;
     }
     100% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
-  }
-  
-  /* ----------------------------------------------
+}
+
+/* ----------------------------------------------
  * Generated by Animista on 2019-2-6 11:34:2
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
@@ -214,28 +209,29 @@
  * animation slide-out-right
  * ----------------------------------------
  */
+
 @-webkit-keyframes slide-out-right {
     0% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
     100% {
-      -webkit-transform: translateX(1000px);
-              transform: translateX(1000px);
-      opacity: 0;
+        -webkit-transform: translateX(1000px);
+        transform: translateX(1000px);
+        opacity: 0;
     }
-  }
-  @keyframes slide-out-right {
+}
+
+@keyframes slide-out-right {
     0% {
-      -webkit-transform: translateX(0);
-              transform: translateX(0);
-      opacity: 1;
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
     100% {
-      -webkit-transform: translateX(1000px);
-              transform: translateX(1000px);
-      opacity: 0;
+        -webkit-transform: translateX(1000px);
+        transform: translateX(1000px);
+        opacity: 0;
     }
-  }
-  
+}
