--- a/css/index.css
+++ b/css/index.css
@@ -189,14 +189,29 @@ img {
   z-index: 500;
   padding: 0 50px;
 }
+@media (max-width: 500px) {
+  .top-bar {
+    padding: 0 5%;
+  }
+}
 .top-bar .heading {
   font-family: 'Permanent Marker', cursive;
   color: #fff;
   font-size: 30px;
 }
+@media (max-width: 500px) {
+  .top-bar .heading {
+    font-size: 20px;
+  }
+}
 .top-bar .menu .menu-button {
   color: #fff;
   font-size: 30px;
+}
+@media (max-width: 500px) {
+  .top-bar .menu .menu-button {
+    font-size: 20px;
+  }
 }
 .menu {
   left: 25px;
@@ -229,7 +244,8 @@ img {
 }
 @media (max-width: 500px) {
   .menu .menu-content {
-    width: 80%;
+    width: 85%;
+    padding: 50px 0;
   }
 }
 .menu .menu-content .close-btn {
@@ -266,6 +282,11 @@ img {
 .menu li {
   border-top: solid 1px rgba(0, 0, 0, 0.125);
   padding: 30px 0;
+}
+@media (max-width: 500px) {
+  .menu li {
+    text-align: center;
+  }
 }
 .menu li:hover {
   color: #808e95;
@@ -512,6 +533,7 @@ img {
 }
 .container header a {
   text-decoration: none;
+  color: #fff;
 }
 .container .features {
   background-color: #321911;
@@ -652,8 +674,16 @@ img {
     width: 100%;
   }
 }
-.container .cta .cta-right a {
-  text-decoration: none;
+.container .cta .cta-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 500px) {
+  .container .cta .cta-right {
+    width: 70%;
+    margin: 10%;
+  }
 }
 .container .cta .cta-right button {
   width: 50%;
@@ -683,11 +713,9 @@ img {
   background: #321911;
   color: #fff;
 }
-@media (max-width: 500px) {
-  .container .cta .cta-right button {
-    width: 70%;
-    margin: 10%;
-  }
+.container .cta .cta-right a {
+  text-decoration: none;
+  color: #fff;
 }
 @media (max-width: 1025px) {
   .container .cta {
