--- a/components/Menu/Menu.less
+++ b/components/Menu/Menu.less
@@ -14,18 +14,19 @@
         height: 100%;
         max-width: 80%;
         overflow-y: auto;
-        padding: 50px 50px;
+        padding: 50px 0;
         position: fixed;
         right: 0;
         top: 0;
         width: 25%;
         z-index: 10002;
+        box-shadow: -2px 0px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
         @media @tablet {
             width: 40%;
         }
         @media @mobile {
             width: 85%;
-            padding: 50px 0;
+            //padding: 50px 0;
         }
         .close-btn {
             // background-image: url(../../images/close.svg);
@@ -66,10 +67,9 @@
     li {
         border-top: solid 1px rgba(0, 0, 0, 0.125); //margin: 25px 0 0 0;
         padding: 30px 0;
-        @media @mobile {
-          text-align: center;
-        }
+        text-align: center;
         &:hover {
+          box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
             color: @secondary-dark;
             background-color: @secondary-light;
         }
