--- a/css/index.css
+++ b/css/index.css
@@ -230,12 +230,13 @@ img {
   height: 100%;
   max-width: 80%;
   overflow-y: auto;
-  padding: 50px 50px;
+  padding: 50px 0;
   position: fixed;
   right: 0;
   top: 0;
   width: 25%;
   z-index: 10002;
+  box-shadow: -2px 0px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 @media (max-width: 1025px) {
   .menu .menu-content {
@@ -245,7 +246,6 @@ img {
 @media (max-width: 500px) {
   .menu .menu-content {
     width: 85%;
-    padding: 50px 0;
   }
 }
 .menu .menu-content .close-btn {
@@ -282,13 +282,10 @@ img {
 .menu li {
   border-top: solid 1px rgba(0, 0, 0, 0.125);
   padding: 30px 0;
-}
-@media (max-width: 500px) {
-  .menu li {
-    text-align: center;
-  }
+  text-align: center;
 }
 .menu li:hover {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   color: #808e95;
   background-color: #e2f1f8;
 }
@@ -537,7 +534,7 @@ img {
 }
 .container .features {
   background-color: #321911;
-  padding: 150px 5%;
+  padding: 150px 10%;
   color: #fff;
 }
 @media (max-width: 1025px) {
