Added rotating gear to menu. Cleaned up tablet and mobile styles. Fixed drop shadows.

--- a/components/Menu/Menu.less
+++ b/components/Menu/Menu.less
@@ -20,7 +20,7 @@
         top: 0;
         width: 25%;
         z-index: 10002;
-        box-shadow: -2px 0px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+        box-shadow: -2px 0px 4px -1px rgba(0, 0, 0, 0.2), -4px 0px 5px 0px rgba(0, 0, 0, 0.14), -1px 0px 10px 0px rgba(0, 0, 0, 0.12);
         @media @tablet {
             width: 40%;
         }
@@ -53,7 +53,7 @@
     a {
         border: 0;
         color: inherit;
-        display: block;
+        display: inline;
         font-size: 3rem;
         outline: 0;
         text-decoration: none;
@@ -63,6 +63,9 @@
             color: @secondary-dark;
             background-color: @secondary-light;
         }
+    }
+    .fas {
+      font-size: 30px;
     }
     li {
         border-top: solid 1px rgba(0, 0, 0, 0.125); //margin: 25px 0 0 0;
