--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
 @mobile: ~"(max-width: 500px)";
-@tablet: ~"(max-width: 1025px)";
+@tablet: ~"(max-width: 1000px)";
 
 
 @landing-color-background:  rgb(97, 100, 104);
@@ -31,5 +31,5 @@
 
 //Browns
 @primary: #5d4037;
-@primary-light: #8b6b61;
+@primary-light: #fcf2ef;
 @primary-dark: #321911;
