--- a/less/index.less
+++ b/less/index.less
@@ -85,6 +85,7 @@
     }
     .features {
         background-color: @primary-dark; // background-color: @secondary-dark;
+        box-shadow: 0px -2px 4px -1px rgba(0, 0, 0, 0.2), 0px -4px 5px 0px rgba(0, 0, 0, 0.14), 0px -1px 10px 0px rgba(0, 0, 0, 0.12);
         padding: 150px 15%;
         color: @landing-color-white;
         @media @tablet {
@@ -134,13 +135,11 @@
             }
         }
         .how-body {
-            .flex(space-around,
-            flex-start,
-            row);
+            .flex(space-around,flex-start,row);
             flex-wrap: wrap;
             .how-section {
                 width: 30%;
-                padding: 1% 1% 3% 0;
+                padding: 1% 1% 1% 0;
                 background-color: @landing-color-white;
                 color: @landing-color-black;
                 width: 450px;
@@ -148,6 +147,7 @@
                 margin: 1%;
                 display: flex;
                 flex-direction: row;
+                align-items: center;
                 box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
                 .border-radius(8px);
                 img {
@@ -212,9 +212,11 @@
         @media @tablet {
             flex-direction: column;
             padding: 5% 10%;
+            text-align: center;
         }
         @media @mobile {
-            padding: 10% 15%;
+            padding: 10% 3%;
+            
         }
     }
 }
