Cleaned up indentations

--- a/less/index.less
+++ b/less/index.less
@@ -22,9 +22,7 @@
     background-size: cover;
 
     header {
-        .flex(center,
-        center,
-        column);
+        .flex(center, center, column);
         text-align: center;
         height: 100vh;
         text-align: center;
@@ -84,7 +82,7 @@
         }
     }
     .features {
-        background-color: @primary-dark; // background-color: @secondary-dark;
+        background-color: @primary-dark;
         box-shadow: 0px -2px 4px -1px rgba(0, 0, 0, 0.2), 0px -4px 5px 0px rgba(0, 0, 0, 0.14), 0px -1px 10px 0px rgba(0, 0, 0, 0.12);
         padding: 150px 15%;
         color: @landing-color-white;
@@ -175,9 +173,7 @@
     }
     .cta {
         background-color: transparent;
-        .flex(space-evenly,
-        center,
-        row);
+        .flex(space-evenly, center, row);
         color: @landing-color-white;
         padding: 5% 10%;
         .cta-left {
