--- a/less/variables.less
+++ b/less/variables.less
@@ -6,30 +6,29 @@
 @landing-color-black: rgb(20, 16, 16);
 @landing-color-white: #fff;
 
-//@landing-features-background:#8e4832;
-//@landing-features-text: #251111;
-//@landing-how-it-works-background: rgb(100, 97, 104);
+//Brown Primary Family
+@primary: #5d4037;
+@primary-light: #fcf2ef;
+@primary-dark: #321911;
+
+
+//Silver Secondary Family
+@secondary: #b0bec5;
+@secondary-light: #e2f1f8;
+@secondary-dark: #808e95;
 
 //Reds
 // @primary: #9e0808;
 // @primary-light: #d74731;
 // @primary-dark: #690000;
 
-//Grey
-@secondary: #b0bec5;
-@secondary-light: #e2f1f8;
-@secondary-dark: #808e95;
-
 //Blues
 // @primary: #3f51b5;
 // @primary-light: #757de8;
 // @primary-dark: #002984;
+
 //Secondary Red
 // @secondary: #f44336;
 // @secondary-light: #ff7961;
 // @secondary-dark: #ba000d;
 
-//Browns
-@primary: #5d4037;
-@primary-light: #fcf2ef;
-@primary-dark: #321911;
